set setInteractiveAuthorizationAllowed on SetPassword call

is important that the setpasswod call uses interactive authorization,
otherwise will be denied, unless the user had been modified beforehand
so an authorization was already granted

BUG:459309


(cherry picked from commit 48ccb433ca79e94ef705734d9cab599f01df97e8)